libraries/json-file/__tests__/__snapshots__/JsonFile-test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has useful error messages for JSON parsing errors 1`] = `
"Error parsing JSON file: /Users/ville/Projects/expo/universe/libraries/json-file/__tests__/files/syntax-error.json
└─ Cause: SyntaxError: Unexpected string in JSON at position 602
  23 |     \\"ios\\": {
  24 |       \\"supportsTablet\\": true,
> 25 |       \\"bundleIdentifier\\" \\"com.wow.testapp\\"
     |                          ^
  26 |     }
  27 |   }
  28 | }"
`;

exports[`has useful error messages for JSON5 parsing errors 1`] = `
"Error parsing JSON file: /Users/ville/Projects/expo/universe/libraries/json-file/__tests__/files/syntax-error.json5
└─ Cause: SyntaxError: JSON5: invalid character ',' at 4:15
  2 |   expo: {
  3 |     // The following line has an error
> 4 |     sdkVersion, \\"26.0.0\\",
    |               ^
  5 |   },
  6 | }
  7 | "
`;
